Iterate over file names and read in data for each subject and save as a new variable week.

--- a/p8105_hw5_rh2916.md
+++ b/p8105_hw5_rh2916.md
@@ -1,26 +1,18 @@
----
-title: "p8105_hw5_rh2916"
-author: "Rui Huang"
-date: "November 1, 2018"
-output: github_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(janitor)
-library(purrr)
-```
+p8105\_hw5\_rh2916
+================
+Rui Huang
+November 1, 2018
 
 ### Start with a dataframe containing all file names
-```{r}
+
+``` r
 df = as.data.frame(list.files(path = "./data"))
 colnames(df) = "filename"
 ```
 
-### Iterate over file names and read in data for each subject 
+### Iterate over file names and read in data for each subject
 
-```{r, message=FALSE}
+``` r
 read_data = function(subject) {
   
   read_csv(paste0("./data/",subject))%>%
@@ -38,8 +30,3 @@ df_problem1 = cbind(df, id, output) %>%
   mutate(week = as.numeric(str_replace(week, "week_", "")),
          id = as.factor(id))
 ```
-
-
-
-
-
