--- a/p8105_hw5_rh2916.md
+++ b/p8105_hw5_rh2916.md
@@ -10,7 +10,7 @@ df = as.data.frame(list.files(path = "./data"))
 colnames(df) = "filename"
 ```
 
-### Iterate over file names and read in data for each subject
+### Iterate over file names and tidy the result
 
 ``` r
 read_data = function(subject) {
@@ -30,3 +30,20 @@ df_problem1 = cbind(df, id, output) %>%
   mutate(week = as.numeric(str_replace(week, "week_", "")),
          id = as.factor(id))
 ```
+
+### Make a spaghetti plot
+
+``` r
+df_problem1 %>%
+  ggplot(aes(x = week, y = observations, color = id)) +
+  geom_line() +
+  facet_grid(~control_arm) +
+  theme(legend.position = "bottom")+
+  labs(
+    x = "week",
+    y = "value"
+  )+
+  ggtitle("Observations on each subject over time")
+```
+
+![](p8105_hw5_rh2916_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
