--- a/p8105_hw5_rh2916.Rmd
+++ b/p8105_hw5_rh2916.Rmd
@@ -64,11 +64,12 @@ Problem 2
 ### Read data, add variable
 
 ```{r}
-df2_raw = read.csv("./homicide-data.csv") 
-  
+df2_raw = read.csv("./homicide-data.csv") %>% 
+  janitor::clean_names()
+
 df_problem2 = 
   df2_raw %>%
-  mutate(city_state = paste(city, state, sep = ","))
+  mutate(city_state = paste(city, state, sep = ",")) 
 ```
 
 The raw data contains `r ncol(df2_raw)` variables and `r nrow(df2_raw)` observations. The variables contain information about the id, report date, victim demographic character, city, state, location and disposition. The reported_date, lat and lon variables are numeric and the rest are factor variables.
@@ -76,16 +77,11 @@ The raw data contains `r ncol(df2_raw)` variables and `r nrow(df2_raw)` observat
 ### summarize total number and unsolved number of homicides
 
 ```{r}
-total_number_of_homicide =
+df_summrize =
   df_problem2 %>% 
-  group_by(city) %>% 
-  summarize(total_homicide = n())
-
-number_of_unsolved_homicides =
-  df_problem2 %>% 
-  filter(disposition == "Closed without arrest" | disposition == "Open/No arrest" ) %>% 
-  group_by(city) %>% 
-  summarize(total_homicide = n())  
+  group_by(city_state) %>% 
+  summarize(total_homicide = n(),
+            unsolved_homicide = sum(disposition == "Closed without arrest" | disposition == "Open/No arrest"))
 ```
 
 ### Estimate the proportion of unsolved homicides in Baltimore, MD
@@ -102,10 +98,18 @@ Baltimore_unsolved_homicides =
   filter(city_state == "Baltimore,MD") %>% 
   summarize(total_homicide = n())
 
-Baltimore_proportion_of_unsolved_homicides = prop.test(Baltimore_unsolved_homicides[ ,1], Baltimore_homicide[ ,1])
-  
-broom::tidy(Baltimore_proportion_of_unsolved_homicides)
+Baltimore_proportion_of_unsolved_homicides = prop.test(Baltimore_unsolved_homicides[ ,1], Baltimore_homicide[ ,1]) %>% 
+broom::tidy() 
+
+Baltimore_proportion_of_unsolved_homicides %>% pull(estimate) 
+Baltimore_proportion_of_unsolved_homicides %>% pull(conf.low)
+Baltimore_proportion_of_unsolved_homicides %>% pull(conf.high)
 ```
+
+```{r}
+
+```
+
 
 
 
