--- a/p8105_hw5_rh2916.md
+++ b/p8105_hw5_rh2916.md
@@ -3,6 +3,8 @@ p8105\_hw5\_rh2916
 Rui Huang
 November 1, 2018
 
+Problem 1
+
 ### Start with a dataframe containing all file names
 
 ``` r
@@ -47,3 +49,114 @@ df_problem1 %>%
 ```
 
 ![](p8105_hw5_rh2916_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+From the Spaghetti plot, we can find that the observations for subjects
+in experimental group increase over time while the observations for
+subjects in control group keep stable over weeks.
+
+Problem 2
+
+### Read data, add variable
+
+``` r
+df2_raw = read.csv("./homicide-data.csv") %>% 
+  janitor::clean_names()
+
+df_problem2 = 
+  df2_raw %>%
+  mutate(city_state = paste(city, state, sep = ",")) 
+```
+
+The raw data contains 12 variables and 52179 observations. The variables
+contain information about the id, report date, victim demographic
+character, city, state, location and disposition. The reported\_date,
+lat and lon variables are numeric and the rest are factor variables.
+
+### summarize total number and unsolved number of homicides
+
+``` r
+df_summrize =
+  df_problem2 %>% 
+  group_by(city_state) %>% 
+  summarize(total_homicide = n(),
+            unsolved_homicide = sum(disposition == "Closed without arrest" | disposition == "Open/No arrest"))
+```
+
+### Estimate the proportion of unsolved homicides in Baltimore, MD
+
+``` r
+Baltimore_homicide =
+  df_problem2 %>% 
+  filter(city_state == "Baltimore,MD") %>% 
+  summarize(total_homicide = n()) 
+
+Baltimore_unsolved_homicides =
+  df_problem2 %>% 
+  filter(disposition == "Closed without arrest" | disposition == "Open/No arrest" ) %>% 
+  filter(city_state == "Baltimore,MD") %>% 
+  summarize(total_homicide = n())
+
+Baltimore_proportion_of_unsolved_homicides =   
+  prop.test(Baltimore_unsolved_homicides[ ,1], Baltimore_homicide[    ,1]) %>% 
+  broom::tidy() %>%
+  janitor::clean_names()
+
+Baltimore_proportion_of_unsolved_homicides %>% pull(estimate) 
+```
+
+    ## [1] 0.6455607
+
+``` r
+Baltimore_proportion_of_unsolved_homicides %>% pull(conf_low)
+```
+
+    ## [1] 0.6275625
+
+``` r
+Baltimore_proportion_of_unsolved_homicides %>% pull(conf_high)
+```
+
+    ## [1] 0.6631599
+
+### prop.test for each of the cities
+
+``` r
+prop_test = function(x, y) {
+  prop.test(x, y) %>% 
+  broom::tidy() %>%
+  janitor::clean_names()
+}
+
+estimate = function(n){
+  df_filter = df_summrize %>%
+  filter(city_state == n)
+
+map2_df( df_filter$unsolved_homicide,df_filter$total_homicide,  prop_test)  
+}
+
+df_city_state = df_summrize %>% pull(city_state)
+
+df_proportion = map_df(df_city_state, estimate)
+
+df_estimate = df_summrize %>%
+  mutate(estimate_proportion =  map(df_city_state, estimate)) %>%
+  unnest() %>% 
+  mutate(city_state = forcats::fct_reorder(city_state,estimate))
+```
+
+### Create a plot that shows the estimates and CIs for each city
+
+``` r
+ggplot(df_estimate) +
+  geom_point(aes(x = city_state, y = estimate)) +
+  geom_errorbar(aes(x = city_state, ymin = conf_low, ymax = conf_high))+  
+  labs(
+    title = "Estimates and CIs for each city",
+    x = "City, State",
+    y = "Estimates and CIs"
+  ) +
+  theme(legend.position = "bottom", axis.text.x = element_text(angle = 90, hjust = 1), legend.key.width = unit(0.15,'cm')) +
+  scale_color_hue(name = "City")
+```
+
+![](p8105_hw5_rh2916_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
