--- a/p8105_hw5_rh2916.Rmd
+++ b/p8105_hw5_rh2916.Rmd
@@ -13,7 +13,7 @@ library(purrr)
 ```
 
 
-Problem 1
+## Problem 1
 
 ### Start with a dataframe containing all file names
 ```{r}
@@ -26,7 +26,7 @@ colnames(df) = "filename"
 ```{r, message=FALSE}
 read_data = function(subject) {
   
-  read_csv(paste0("./data/",subject))%>%
+  read_csv(paste0("./data",subject))%>%
     janitor::clean_names() 
 }
 
@@ -36,7 +36,7 @@ id = c(1:20)
 
 df_problem1 = cbind(df, id, output) %>%
   mutate(filename = str_replace(filename, ".csv", ""))%>%
-  separate(filename, into = c("control_arm", "subject_id"), sep = "_") %>%
+  separate(filename, into = c("arm", "subject_id"), sep = "_") %>%
   gather(key = week, value = observations, week_1:week_8) %>% 
   mutate(week = as.numeric(str_replace(week, "week_", "")),
          id = as.factor(id))
@@ -46,9 +46,8 @@ df_problem1 = cbind(df, id, output) %>%
 
 ```{r}
 df_problem1 %>%
-  ggplot(aes(x = week, y = observations, color = id)) +
+  ggplot(aes(x = week, y = observations, group = id, color = arm)) +
   geom_line() +
-  facet_grid(~control_arm) +
   theme(legend.position = "bottom")+
   labs(
     x = "week",
@@ -57,9 +56,9 @@ df_problem1 %>%
   ggtitle("Observations on each subject over time")
 ```
 
-From the Spaghetti plot, we can find that the observations for subjects in experimental group increase over time while the observations for subjects in control group keep stable over weeks.
+From the Spaghetti plot, we can find that the baseline for the two group are similar, however, the observations for subjects in experimental group increase over time while the observations for subjects in control group keep stable over weeks.
 
-Problem 2
+## Problem 2
 
 ### Read data, add variable
 
@@ -74,15 +73,19 @@ df_problem2 =
 
 The raw data contains `r ncol(df2_raw)` variables and `r nrow(df2_raw)` observations. The variables contain information about the id, report date, victim demographic character, city, state, location and disposition. The reported_date, lat and lon variables are numeric and the rest are factor variables.
 
-### summarize total number and unsolved number of homicides
+### Summarize total number and unsolved number of homicides
 
 ```{r}
 df_summrize =
   df_problem2 %>% 
   group_by(city_state) %>% 
   summarize(total_homicide = n(),
-            unsolved_homicide = sum(disposition == "Closed without arrest" | disposition == "Open/No arrest"))
+            unsolved_homicide = sum(disposition == "Closed without arrest" | disposition == "Open/No arrest")) 
+
+knitr::kable(df_summrize)
 ```
+
+In the dataset, there are two city Tulsa in both AL and OK. In Tulsa, AL, only one homicide and 0 unsolved homicide. 
 
 ### Estimate the proportion of unsolved homicides in Baltimore, MD
 
@@ -92,20 +95,13 @@ Baltimore_homicide =
   filter(city_state == "Baltimore,MD") %>% 
   summarize(total_homicide = n()) 
 
-Baltimore_unsolved_homicides =
-  df_problem2 %>% 
-  filter(disposition == "Closed without arrest" | disposition == "Open/No arrest" ) %>% 
-  filter(city_state == "Baltimore,MD") %>% 
-  summarize(total_homicide = n())
+df_baltimore <- df_summrize %>% 
+  filter(city_state=='Baltimore,MD')
 
-Baltimore_proportion_of_unsolved_homicides =   
-  prop.test(Baltimore_unsolved_homicides[ ,1], Baltimore_homicide[    ,1]) %>% 
-  broom::tidy() %>%
-  janitor::clean_names()
+p.test <- prop.test(df_baltimore$unsolved_homicide,df_baltimore$total_homicide) 
 
-Baltimore_proportion_of_unsolved_homicides %>% pull(estimate) 
-Baltimore_proportion_of_unsolved_homicides %>% pull(conf_low)
-Baltimore_proportion_of_unsolved_homicides %>% pull(conf_high)
+broom::tidy(p.test)[,c(1,5,6)] %>% 
+  knitr::kable()
 ```
 
 ### prop.test for each of the cities 
@@ -137,8 +133,8 @@ df_estimate = df_summrize %>%
 ### Create a plot that shows the estimates and CIs for each city
 
 ```{r}
-ggplot(df_estimate) +
-  geom_point(aes(x = city_state, y = estimate)) +
+ggplot(df_estimate, aes(x = city_state, y = estimate, color = city_state)) +
+  geom_point() +
   geom_errorbar(aes(x = city_state, ymin = conf_low, ymax = conf_high))+  
   labs(
     title = "Estimates and CIs for each city",
@@ -146,9 +142,10 @@ ggplot(df_estimate) +
     y = "Estimates and CIs"
   ) +
   theme(legend.position = "bottom", axis.text.x = element_text(angle = 90, hjust = 1), legend.key.width = unit(0.15,'cm')) +
-  scale_color_hue(name = "City")
+  theme(legend.position = "none")
 ```
 
+From the plot, we can find that Chicago, New Orleans, Baltimore have top three proportion of unsolved homicide. There is no unsolved case in Tulsa, AL, so the CI is 0 to 1. There might be some error on collecting data. When we exclude Tulsa, AL, Richmond has the lowest proportion of unsolved homicide.
 
 
 
