Move all data to a new file data

--- a/p8105_hw5_rh2916.Rmd
+++ b/p8105_hw5_rh2916.Rmd
@@ -17,7 +17,7 @@ library(purrr)
 
 ### Start with a dataframe containing all file names
 ```{r}
-df = as.data.frame(list.files(path = "./data"))
+df = as.data.frame(list.files(path = "./data/data1"))
 colnames(df) = "filename"
 ```
 
@@ -26,7 +26,7 @@ colnames(df) = "filename"
 ```{r, message=FALSE}
 read_data = function(subject) {
   
-  read_csv(paste0("./data",subject))%>%
+  read_csv(paste0("./data/data1/",subject))%>%
     janitor::clean_names() 
 }
 
@@ -63,7 +63,7 @@ From the Spaghetti plot, we can find that the baseline for the two group are sim
 ### Read data, add variable
 
 ```{r}
-df2_raw = read.csv("./homicide-data.csv") %>% 
+df2_raw = read.csv("./data/homicide-data.csv") %>% 
   janitor::clean_names()
 
 df_problem2 = 
