--- a/p8105_hw5_rh2916.md
+++ b/p8105_hw5_rh2916.md
@@ -8,7 +8,7 @@ November 1, 2018
 ### Start with a dataframe containing all file names
 
 ``` r
-df = as.data.frame(list.files(path = "./data"))
+df = as.data.frame(list.files(path = "./data/data1"))
 colnames(df) = "filename"
 ```
 
@@ -17,7 +17,7 @@ colnames(df) = "filename"
 ``` r
 read_data = function(subject) {
   
-  read_csv(paste0("./data/",subject))%>%
+  read_csv(paste0("./data/data1/",subject))%>%
     janitor::clean_names() 
 }
 
@@ -59,7 +59,7 @@ group keep stable over weeks.
 ### Read data, add variable
 
 ``` r
-df2_raw = read.csv("./homicide-data.csv") %>% 
+df2_raw = read.csv("./data/homicide-data.csv") %>% 
   janitor::clean_names()
 
 df_problem2 = 
